* Macro element did not include top level Text. Bugzilla report 36803.
* AntClassLoader did not isolate resources when isolate was set. Bugzilla report 38747.
* Diagnostics broken when using java 1.4. Bugzilla report 40395.
* Exception reporting in <copy> was broken. Bugzilla report 40300.
* Handling of corrupt tar files, TarInputStream.read() never returns EOF.
  Bugzilla report 39924.

Other changes:
--------------

* added setbeans attribute to <script> to allow <script>'s to be
  run without referencing all references.
  Bugzilla report 37688.
* added classpath attribute and nested element to <script> to allow
  the language jars to be specified in the build script.
  Bugzilla report 29676.
* trim the driver attribute on the <sql> task. Bugzilla report 21228.
* Allow (jar) files as well as directories to be given to jdepend.
  Bugzilla report 28865.
* Convert SplashTask to use NOT sun internal classes.
  Bugzilla report 35619.
* Made PatterSet#hasPatterns public to allow custom filesets access.
  Bugzilla report 36772.
* added searchparents attribute to <available>. Bugzilla report 39549.

Changes from Ant 1.6.5 to Ant 1.7.0Beta1
========================================

Changes that could break older environments:
-------------------------------------------

* Removed support for xalan1 completely. Users of Xalan1 for Ant builds will
  have to stay at ant 1.6.5 or upgrade to xalan2.

* Use org.apache.log4j.Logger instead of org.apache.log4j.Category.
  Category has been deprecated for ~2 years and has been removed from
  the log4j code.  Logger was introduced in log4j 1.2 so users of
  log4j 1.1 and log4j 1.0 need to upgrade to a newer version of log4j.
  Bugzilla Report 31951.

* build.sysclasspath now also affects the bootclasspath handling of
  spawned Java VMs.  If you set build.sysclasspath to anything other
  than "ignore" (or leave it unset, since "ignore" is the default when
  it comes to bootclasspath handling), then the bootclasspath of the