@@ -230,6 +230,7 @@ Steve Morin
 Steven E. Newton
 Takashi Okamoto
 Tariq Master
+Trejkaz Xaoza
 Thomas Butz
 Thomas Christen
 Thomas Christensen
