@@ -959,6 +959,10 @@
     <last>Eugelink</last>
   </name>
   <name>
+    <first>Trejkaz</first>
+    <last>Xaoz</last>
+  </name>
+  <name>
     <first>Ulrich</first>
     <last>Schmidt</last>
   </name>
